syntax = "proto3";
package CompA;

// ******************************************************************************************** //
message AMessage
{
    message Astruct
    {
        int32 A_01 = 1;
        float A_02 = 2;
    }
    repeated Astruct A = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message BMessage
{
    double B = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message CMessage
{
    message Cstruct
    {
        int32 C_01 = 1;
        float C_02 = 2;
        double C_03 = 3;
    }
    repeated Cstruct C = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message DMessage
{
    float D = 1;
}
// ******************************************************************************************** //  

// ******************************************************************************************** // 
message CompAOutMessage
{
    AMessage A = 1;
    BMessage B = 2;
    CMessage C = 3;
    DMessage D = 4;
}
// ******************************************************************************************** // 