syntax = "proto3";
package CompC;

// ******************************************************************************************** //
message CMessage
{
    message Cstruct
    {
        int32 C_01 = 1;
        float C_02 = 2;
        double C_03 = 3;
    }
    repeated Cstruct C = 1;
}
// ******************************************************************************************** //


// ******************************************************************************************** //
message EMessage
{
    bool E = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message FMessage
{
    double F = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message JMessage
{
    double J = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message KMessage
{
    int64 K = 1;
}
// ******************************************************************************************** //  

// ******************************************************************************************** //
message LMessage
{
    float L = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** // 
message CompCInMessage
{
    CMessage C = 1;
    EMessage E = 2;
    JMessage J = 3;
    LMessage L = 4;
}
// ******************************************************************************************** //

// ******************************************************************************************** // 
message CompCOutMessage
{
    FMessage F = 1;
    JMessage J = 2;
    KMessage K = 3;
}
// ******************************************************************************************** //