syntax = "proto3";
package CompD;

// ******************************************************************************************** //
message CMessage
{
    message Cstruct
    {
        int32 C_01 = 1;
        float C_02 = 2;
        double C_03 = 3;
    }
    repeated Cstruct C = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message GMessage
{
    double G = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message HMessage
{
    repeated float H = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message KMessage
{
    int64 K = 1;
}
// ******************************************************************************************** //  

// ******************************************************************************************** //
message LMessage
{
    float L = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** //
message MMessage
{
    int64 M = 1;
}
// ******************************************************************************************** //

// ******************************************************************************************** // 
message CompDInMessage
{
    CMessage C = 1;
    GMessage G = 2;
    KMessage K = 3;
}
// ******************************************************************************************** //

// ******************************************************************************************** // 
message CompDOutMessage
{
    HMessage H = 1;
    LMessage L = 2;
    MMessage M = 3;
}
// ******************************************************************************************** //